# TermEditor

./: Cargo.toml  LICENSE  README.md
src/: application.rs  document.rs  highlight.rs  row.rs  terminal.rs
