[package]
name = "revise"
version = "0.1.5"
edition = "2021"
authors = ["nadmax <n.maximilien1@gmail.com>"]
license = "MIT"
description = "A minimalist text editor"
homepage = "https://github.com/nadmax/revise"
keywords = ["cli", "text-editor", "linux"]
readme = "CARGO.md"
repository = "https://github.com/nadmax/revise"
categories = ["text-editors", "development-tools", "command-line-interface"]

[dependencies]
unicode-segmentation = "1.10.1"
cli-clipboard = "0.4.0"
thiserror = "1.0.49"
sys = "0.0.1"
cross = "0.2.5"
term = "0.7.0"
crossterm = "0.27.0"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "s"
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
