[package]
name = "TermEditor"
version = "0.1.1"
edition = "2021"
authors = ["nadmax <2729400@student.gla.ac.uk>"]
license = "MIT"
description = "A Terminal Editor"
homepage = "https://github.io/2729400n/TermEditor"
keywords = ["cli", "text-editor"]
readme = "CARGO.md"
repository = "https://github.com/2729400n/TermEditor"
categories = ["text-editors", "development-tools", "command-line-interface"]

[dependencies]
unicode-segmentation = "1.10.1"
cli-clipboard = "0.4.0"
thiserror = "1.0.49"
sys = "0.0.1"
term = "0.7.0"
crossterm = "0.27.0"

[profile.dev]
opt-level = 1

[profile.release]
strip = true
opt-level = "s"
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
